src/parsers/snapshots/meshb__parsers__mail_parser__tests__mail_parser_uselesslines_3.snap
---
source: src/parsers/mail_parser.rs
expression: "mail_parser(\" \\n %comment\\nCOOR_3D\\nN1 2 3.0 4\\nFINSF\\nCOOR_3D\\nN2 2 3.0 4\\nN3 3 4 4\\nFINSF\\n %comment\\n \\n\")"
---
Ok(
    MailParseOutput {
        nodes: [
            NodeProp {
                name: "N1",
                x: 2.0,
                y: 3.0,
                z: 4.0,
            },
            NodeProp {
                name: "N2",
                x: 2.0,
                y: 3.0,
                z: 4.0,
            },
            NodeProp {
                name: "N3",
                x: 3.0,
                y: 4.0,
                z: 4.0,
            },
        ],
        cells: [],
        groups: [],
    },
)
