src/parsers/snapshots/meshb__parsers__mail_parser__tests__missing_coords.snap
---
source: src/parsers/mail_parser.rs
expression: "node_description(\"N12\")"
---
Err(
    Error(
        Alt(
            [
                Base {
                    location: "",
                    kind: Kind(
                        Float,
                    ),
                },
                Base {
                    location: "",
                    kind: Kind(
                        Float,
                    ),
                },
                Base {
                    location: "",
                    kind: Kind(
                        Float,
                    ),
                },
                Base {
                    location: "",
                    kind: Kind(
                        Float,
                    ),
                },
            ],
        ),
    ),
)
