src/parsers/snapshots/meshb__parsers__mail_parser__tests__missing_digits.snap
---
source: src/parsers/mail_parser.rs
expression: "node_or_cell_name(\"N\")"
---
Err(
    Error(
        Base {
            location: "",
            kind: Expected(
                Digit,
            ),
        },
    ),
)
