src/parsers/snapshots/meshb__parsers__mail_parser__tests__missing_first_letter.snap
---
source: src/parsers/mail_parser.rs
expression: "node_description(\"23\")"
---
Err(
    Error(
        Base {
            location: "23",
            kind: Expected(
                Alpha,
            ),
        },
    ),
)
