src/parsers/snapshots/meshb__parsers__mail_parser__tests__node_3d_coords_ok_3.snap
---
source: src/parsers/mail_parser.rs
expression: "node_3d_coords(\"   1.0  2 3.01 \")"
---
Ok(
    (
        "",
        [
            1.0,
            2.0,
            3.01,
        ],
    ),
)
