src/parsers/snapshots/meshb__parsers__mail_parser__tests__node_3d_coords_ok_4.snap
---
source: src/parsers/mail_parser.rs
expression: "node_3d_coords(\"   1.0e1  2E+1 3.01E+00 \")"
---
Ok(
    (
        "",
        [
            10.0,
            20.0,
            3.01,
        ],
    ),
)
